LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.276 $>


[Note: This file does not mention every change made to the NetBSD source tree.
For an exhaustive list, please subscribe to the `source-changes' mailing list,
or see the mailing list archives.  For more information, send a message
containing just the word `help' to `majordomo@NetBSD.org'.]


Changes from NetBSD 1.6 to NetBSD 2.0:
	libcrypt: support bcrypt password entries.  can be chosen with
		"blowfish" keyword in passwd.conf.  from openbsd
		[itojun 20020524]
	tcp(4): implement path MTU discovery blackhole detection (turn off path
		MTU discovery if the connection is losing).  PR 12790.
		[itojun 20020526]
	pppd(8): import 2.4.1 [christos 20020529]
	ftpd(8): optionally and experimentally use mmap(2) instead of read(2)
		for binary file transfer [enami 20020530]
	prep: support IBM RS/6000 43P 7043-140. [nonaka 20020530]
	pmppc: a port to Artesyn's PM/PPC board.  [augustss 20020531]
	tcpdump(8): upgrade to 3.7.1 as of 2002/5/31. [itojun 20020531]
	amdpm(4): driver for AMD768 Power Management Controller (but currently
		an interface to rnd(4) only.)  [enami 20020602]
	gspahextoc: was obsoleted by the -c option to gspa(1) a long
		time ago, and has thus been removed [is 20020607]
	netinet6: synchronize with recent interface/router/prefix management
		logic from KAME.  [itojun 20020608]
	greconfig(8): obsoleted.  use ifconfig(8) for configuration.
		[itojun 20020609]
	netinet: path MTU discovery is turned on by default (currently used
		for TCP only).  [itojun 20020613]
	amd(8): add new mount option "xlatecookie" to support NFS v3 mounts
		with cookie translation.  [tron 20020614]
	factor(6): Use a Pollard Rho algorithm to factor arbitrary sized
		numbers.  [simonb 20020615]
	systrace(1): Integrate Niels Provos' systrace(1) binary sand-boxing,
		device and userland support. [christos 20020617]
	netstat(1): add -q flag to print information about
		software interrupt queue.  [enami 20020703]